# anvil-serving

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  sitemap.xml
.claude/: gate-router.local.md
.claude/agents/: anvil-adversarial-reviewer.md  anvil-benchmark-runner.md  anvil-evidence-reporter.md  anvil-inventory-scout.md  anvil-orchestrator.md  anvil-preflight-runner.md  anvil-probe-evidence-runner.md  anvil-quality-critic.md  anvil-route-analyst.md  anvil-serve-operator.md
.codex/: config.toml
.codex/agents/: anvil-adversarial-reviewer.md  anvil-adversarial-reviewer.toml  anvil-benchmark-runner.md  anvil-benchmark-runner.toml  anvil-evidence-reporter.md  anvil-evidence-reporter.toml  anvil-inventory-scout.md  anvil-inventory-scout.toml  anvil-orchestrator.md  anvil-orchestrator.toml  anvil-preflight-runner.md  anvil-preflight-runner.toml  anvil-probe-evidence-runner.md  anvil-probe-evidence-runner.toml  anvil-quality-critic.md  anvil-quality-critic.toml  anvil-route-analyst.md  anvil-route-analyst.toml  anvil-serve-operator.md  anvil-serve-operator.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
MODEL-SETTINGS-EXAMPLE/: index.html
OPENCLAW-INTEGRATION-SPEC/: index.html
OPENCLAW-LIVE-VALIDATION/: index.html
PLAN-advise-and-defer/: index.html
QUALITY-GATED-ROUTER/: index.html
SERVES-AND-EVAL/: index.html
adr/: index.html
adr/0001-cloud-cost-and-subscription-auth/: index.html
adr/template/: index.html
anvil_serving/: __init__.py  _aggregate_usage.py  _role_split.py  _sync.py  benchmark.py  benchmark_evidence.py  cache_prune.py  calibrate.py  cli.py  collectors.py  command_tree.py  config.py  controller.py  deploy.py  doctor.py  edge.py  eval.py  gpu_sharing.py  gpus.py  guard.py  harness.py  host.py  init.py  mcp.py  model_controls.py  models.py  multiplexer.py  operator_output.py  paths.py  preflight.py  profile.py  reservations.py  router_endpoint.py  router_manage.py  score.py  serve_recipes.py  serves.py  targets.py  topology.py  topology_cli.py  (+5 more)
anvil_serving/_scaffold_templates/: docker-compose.comfyui.yml  docker-compose.voice-proxy.yml  docker-compose.workbench.yml  docker-compose.yml  env.example  example-docker.toml  example-flexibility.toml  example.toml  modes.toml  operator-topology.toml  serve-recipes.toml  serves.comfyui.toml  serves.toml  serves.voice.toml
anvil_serving/external_benchmarks/: __init__.py  cli.py  compare.py  normalize.py  notebook.py  schema.py  store.py
anvil_serving/observability/: __init__.py  api.py  macos_primitives.py  redaction.py  retention.py  schema.py  status.py
anvil_serving/router/: __init__.py  __main__.py  admission.py  audio.py  availability.py  backends.py  calibrate.py  classify.py  commit_window.py  config.py  decision_log.py  discovery.py  fallback.py  fingerprint.py  front_door.py  grader_agentsdk.py  intent.py  internal.py  metrics.py  modes.py  policy.py  prices.py  profile_bootstrap.py  profile_store.py  purpose.py  registry.py  seams.py  secrets.py  serve.py  tier0_keywords.json  tier_health.py  verify.py
anvil_serving/voice/: __init__.py  benchmark.py  bridge.py  cancel_scope.py  cli.py  config.py  messages.py  pipeline.py  realtime_service.py
changelog/: index.html
configs/: example-docker.toml  example-flexibility.toml  example-with-cloud.toml  example.toml  host.example.toml  modes.example.toml  serve-recipes.toml
docs/: ADR-0001-CLOUD-COST-AND-SUBSCRIPTION-AUTH.md  ARCHITECTURE.md  BENCHMARKS.md  BLUEPRINT.md  CLI-COMMAND-MANIFEST.json  CLI-CONSOLIDATION-INVENTORY.md  CLI-LEGACY-DISPOSITIONS.md  CLI-REFERENCE-AUDIT.json  CLI-UX-AUDIT.json  CLI.md  COMFYUI-MIGRATION-RUNBOOK.md  CONFIGURATION.md  DESIGN-DISCUSSION-2026-06-27.md  DEVICE-TOPOLOGIES.md  DIRECTION.md  DISCOVERY-AND-REFINEMENT.md  EXTERNAL-BENCHMARKS.md  FAKOLI-DARK-V2-PLANNING-CONTEXT.md  GETTING-STARTED.md  HARNESS-COMPARISON.md  HARNESS-ROUTER-CHANGES.md  MODEL-LANDSCAPE.md  MODEL-SETTINGS-EXAMPLE.md  OPENCLAW-ANVIL-VOICE.md  OPENCLAW-INTEGRATION-SPEC.md  OPENCLAW-LIVE-VALIDATION.md  OPERATOR-PLAYBOOKS.md  OPERATOR-SKILLS-AND-SUBAGENTS.md  PLAN-advise-and-defer.md  QUALITY-GATED-ROUTER.md  REVIEW-2026-07-02-architecture-and-models.md  SERVES-AND-EVAL.md  SYSTEM-OBSERVABILITY-DASHBOARD-MILESTONES.md  TAILNET-ENDPOINT-RUNBOOK.md  TERMINOLOGY.md  TROUBLESHOOTING.md  USAGE-BASELINE-METHOD.md  VOICE-REALTIME.md  VOICE.md  WORKBENCH.md  (+2 more)
docs/adr/: 0001-cloud-cost-and-subscription-auth.md  0002-serves-are-compose-defined.md  0003-portable-defaults-and-generic-onboarding.md  0005-anvil-503-native-failover-unreliable.md  (+26 more)
scripts/: __init__.py  audit_cli_references.py  audit_cli_ux.py  check_anvil_delivery_gate.py  check_markdown_links.py  pre-submit.sh  sync_scaffold_templates.py  wheel_smoke.py
search/: search_index.json
specs/: SPEC-agent-refiner.md  SPEC-anvil-core.md
templates/: docker-compose.vllm.yml.tmpl  docker-compose.yml.tmpl
tests/: test_anvil_delivery_gate.py  test_benchmark.py  test_benchmark_evidence.py  test_cache_reclaim_mcp.py  test_cli.py  test_cli_contract.py  test_cli_help_ux.py  test_cli_reference_audit.py  test_cli_ux_audit.py  test_collectors.py  test_command_tree.py  test_compose_router.py  test_controller.py  test_deploy.py  test_dockerfile.py  test_doctor.py  test_edge.py  test_eval.py  test_fast_tier_promotion.py  test_gpu_sharing.py  test_gpus.py  test_guard.py  test_harness.py  test_host.py  test_huggingface_speech_to_speech_example.py  test_init.py  test_markdown_links.py  test_mcp.py  test_mcp_preflight_parity.py  test_models.py  test_multiplexer_drain.py  test_openclaw_colo_smoke.py  test_openclaw_setup_mcp.py  test_openclaw_sync_anvil_voice.py  test_openclaw_validate.py  test_operator_output.py  test_pre_submit_contract.py  test_preflight.py  test_profile.py  test_q36_manifest.py  (+17 more)
(+861 files in other folders)
