[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil-serving"
version = "0.1.0"
description = "Right-size and run a local LLM serving tier from your own coding-agent usage."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"   # the router's config loader uses stdlib tomllib (3.11+)
authors = [{ name = "Sekou Doumbouya" }]
keywords = ["llm", "sglang", "vllm", "inference", "claude-code", "local-llm", "blackwell"]
dependencies = []   # stdlib-only by design; optional extras pull in nothing required

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
anvil-serving = "anvil_serving.cli:main"

[tool.setuptools.packages.find]
include = ["anvil_serving*"]   # ship subpackages (router, dialects, …) and future ones; excludes tests/

[tool.setuptools.package-data]
# Ship the canonical Tier-0 keyword taxonomy (tier0_keywords.json) inside the
# wheel so classify.py can load it at runtime from an installed package.
"anvil_serving.router" = ["*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
