[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil-serving"
version = "0.3.0"
description = "A quality-gated local-model router for coding harnesses — local where it's proven, cloud where it isn't, verified with automatic fallback."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"   # the router's config loader uses stdlib tomllib (3.11+)
authors = [{ name = "Sekou Doumbouya" }]
keywords = [
    "llm", "router", "local-llm", "claude-code", "openai", "anthropic",
    "quality-gate", "verify", "fallback", "inference", "coding-agent",
    "sglang", "vllm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []   # stdlib-only by design; optional extras pull in nothing required

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/fakoli/anvil-serving"
Repository = "https://github.com/fakoli/anvil-serving"
Issues = "https://github.com/fakoli/anvil-serving/issues"
Changelog = "https://github.com/fakoli/anvil-serving/blob/main/CHANGELOG.md"

[project.scripts]
anvil-serving = "anvil_serving.cli:main"

[tool.setuptools.packages.find]
include = ["anvil_serving*"]   # ship subpackages (router, dialects, …) and future ones; excludes tests/

[tool.setuptools.package-data]
# Ship the canonical Tier-0 keyword taxonomy (tier0_keywords.json) inside the
# wheel so classify.py can load it at runtime from an installed package.
"anvil_serving.router" = ["*.json"]
"anvil_serving" = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
ignore = ["E701", "E702"]
