[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil-serving"
version = "0.10.0"
description = "A quality-gated local-model router for coding harnesses — local where it's proven, cloud where it isn't, verified with automatic fallback."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"   # the router's config loader uses stdlib tomllib (3.11+)
authors = [{ name = "Sekou Doumbouya" }]
keywords = [
    "llm", "router", "local-llm", "claude-code", "openai", "anthropic",
    "quality-gate", "verify", "fallback", "inference", "coding-agent",
    "sglang", "vllm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []   # stdlib-only by design; optional extras pull in nothing required

[project.optional-dependencies]
dev = ["pytest"]
# `voice` extra: ONLY for optionally running the voice-pipeline orchestrator +
# realtime server locally (anvil_serving/voice/). The STT/TTS engines
# themselves run OUT-OF-PROCESS as separate serves speaking the OpenAI audio
# sub-protocols (/v1/audio/transcriptions, /v1/audio/speech) -- see
# docs/findings/2026-07-04-hf-speech-to-speech-review.md -- so this extra
# stays deliberately small. Nothing here is required to import
# anvil_serving.router or run `anvil-serving serve`; the router hot path gains
# ZERO new required dependency. Concrete pins land in the unit that wires the
# orchestrator's audio I/O; the placeholders below just name the expected shape.
voice = [
    # "numpy",        # audio frame buffers for the in-process orchestrator
    # "webrtcvad",     # torch-free acoustic VAD (avoids a Silero/torch.hub pull)
    "sounddevice",     # local mic/speaker duplex (scripts/voice/local_loop_demo.py, T010) --
                       # guarded-import in anvil_serving/voice/connections/local_audio.py, so
                       # nothing else in this package requires it to be installed.
    "openai",          # official Realtime SDK client, for scripts/voice/realtime_sdk_client_demo.py
                       # (T014) ONLY -- guarded-import there too. Never used to call an LLM in the
                       # hot path (see this repo's golden rule: the LLM stage speaks Chat
                       # Completions over plain urllib, anvil_serving/voice/stages/llm.py -- this
                       # is exclusively for driving the OTHER end of anvil's own Realtime server as
                       # a proof-of-wire-compatibility test client).
]

[project.urls]
Homepage = "https://github.com/fakoli/anvil-serving"
Repository = "https://github.com/fakoli/anvil-serving"
Issues = "https://github.com/fakoli/anvil-serving/issues"
Changelog = "https://github.com/fakoli/anvil-serving/blob/main/CHANGELOG.md"

[project.scripts]
anvil-serving = "anvil_serving.cli:main"

[tool.setuptools.packages.find]
include = ["anvil_serving*"]   # ship subpackages (router, dialects, …) and future ones; excludes tests/

[tool.setuptools.package-data]
# Ship the canonical Tier-0 keyword taxonomy (tier0_keywords.json) inside the
# wheel so classify.py can load it at runtime from an installed package.
"anvil_serving.router" = ["*.json"]
"anvil_serving" = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
ignore = ["E701", "E702"]
